--- a/app/src/main/res/layout/activity_step_detector.xml
+++ b/app/src/main/res/layout/activity_step_detector.xml
@@ -48,7 +48,7 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:src="@drawable/camera"
+                android:src="@drawable/step_detector"
                 android:padding="10sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
@@ -111,7 +111,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Steps Value"
+                    android:text="Steps"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -134,7 +134,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Accuracy Value"
+                    android:text="Accuracy"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -157,7 +157,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Sampling Rate Value"
+                    android:text="Sampling Rate"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -180,7 +180,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Min Delay Value"
+                    android:text="Min Delay"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -204,7 +204,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Name Value"
+                    android:text="Name"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -228,7 +228,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Vendor Value"
+                    android:text="Vendor"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -252,7 +252,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Version Value"
+                    android:text="Version"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -276,7 +276,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Version Value"
+                    android:text="Power"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -300,7 +300,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Max Delay Value"
+                    android:text="Max Delay"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
@@ -324,7 +324,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Max Delay Value"
+                    android:text="Max Delay"
                     android:fontFamily="sans-serif-smallcaps"
                     android:textSize="20sp"
                     android:textColor="@color/colorPrimaryDark"
