--- a/app/src/main/res/layout/activity_multi_touch.xml
+++ b/app/src/main/res/layout/activity_multi_touch.xml
@@ -2,31 +2,29 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
-    <LinearLayout
+    <com.appbusters.robinkamboj.senseitall.controller.MultiTouchCanvas
+        android:id="@+id/multiTouchView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="10">
+        android:layout_height="match_parent" />
 
-        <com.appbusters.robinkamboj.senseitall.controller.MultiTouchCanvas
-            android:id="@+id/multiTouchView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_gravity="bottom"
+        android:layout_height="50sp"
+        android:background="@color/colorBlackShade">
 
         <TextView
             android:id="@+id/tvInfo"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="9"
-            android:background="@color/colorBlackShade"
+            android:layout_height="wrap_content"
             android:fontFamily="serif-monospace"
             android:textAlignment="center"
             android:textColor="@android:color/holo_green_light"
             android:textSize="16sp"
             android:textStyle="bold" />
-    </LinearLayout>
+
+    </ScrollView>
 
 </FrameLayout>
