--- a/app/src/main/res/layout/activity_nfc.xml
+++ b/app/src/main/res/layout/activity_nfc.xml
@@ -48,7 +48,7 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:src="@drawable/radio"
+                android:src="@drawable/nfc"
                 android:padding="10sp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
@@ -76,7 +76,7 @@
                 android:padding="6sp"
                 android:gravity="center"
                 android:textColor="@color/colorBlackShade"
-                android:text="SAMPLE DATA"/>
+                android:text="NFC"/>
 
         </android.support.v7.widget.CardView>
 
@@ -133,7 +133,7 @@
 
             <TextView
 
-                android:id="@+id/one"
+                android:id="@+id/two"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="sans-serif-smallcaps"
@@ -147,13 +147,15 @@
                 android:id="@+id/ndef"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/one"
                 android:fontFamily="casual"
                 android:gravity="center"
                 android:padding="3sp"
                 android:text="Value"
                 android:textColor="@color/colorPrimaryDark"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                android:layout_below="@+id/two"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
 
         </RelativeLayout>
