--- a/app/src/main/res/layout-land/activity_radio.xml
+++ b/app/src/main/res/layout-land/activity_radio.xml
@@ -54,7 +54,7 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:src="@drawable/flash"
+                    android:src="@drawable/radio"
                     android:padding="10sp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
@@ -94,34 +94,35 @@
             app:cardCornerRadius="5sp"
             app:cardElevation="@dimen/app_bar_elevation">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="0sp"
-                    android:layout_weight="2"
-                    android:layout_gravity="center"
-                    android:src="@drawable/flashlight"
-                    android:padding="15sp"
-                    android:onClick="onClick"
-                    android:id="@+id/flashlight"
-                    android:background="@color/colorBlackShade"/>
+                android:gravity="center">
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="0sp"
-                    android:layout_weight="1"
-                    android:padding="10sp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textSize="25sp"
+                    android:textColor="@color/colorPrimary"
+                    android:text="Radio Version:"
+                    android:id="@+id/one"
                     android:fontFamily="sans-serif-smallcaps"
-                    android:text="Click The Button To Turn ON/OFF The Flash"
-                    android:textSize="15sp"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:gravity="center"/>
+                    android:padding="3sp"/>
 
-            </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textSize="30sp"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:text="Value"
+                    android:layout_below="@+id/one"
+                    android:id="@+id/radio_version"
+                    android:fontFamily="casual"
+                    android:padding="3sp"/>
+
+            </RelativeLayout>
 
         </android.support.v7.widget.CardView>
 
