--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -90,49 +90,38 @@
         android:layout_margin="10sp"
         android:layout_below="@+id/ll">
 
-        <LinearLayout
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <SurfaceView
                 android:layout_width="match_parent"
-                android:layout_height="300sp"
-                android:layout_gravity="center_horizontal"
+                android:layout_height="match_parent"
                 android:id="@+id/preview"/>
 
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Show Preview"
+                android:id="@+id/show_preview"
+                android:layout_gravity="bottom|left"
+                android:layout_margin="10sp"
+                android:textColor="@color/colorWhiteShade"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:padding="10sp"/>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal">
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Stop Preview"
+                android:id="@+id/stop_preview"
+                android:layout_gravity="bottom|right"
+                android:textColor="@color/colorWhiteShade"
+                android:layout_margin="10sp"
+                android:backgroundTint="@color/colorPrimaryDark"
+                android:padding="10sp"/>
 
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/show_preview"
-                        android:text="SHOW PREVIEW"
-                        android:padding="15sp"
-                        android:backgroundTint="#FF0000"
-                        android:textColor="#FFF"/>
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/stop_preview"
-                        android:text="STOP PREVIEW"
-                        android:padding="15sp"
-                        android:backgroundTint="#FF0000"
-                        android:textColor="#FFF"/>
-
-                </LinearLayout>
-
-            </ScrollView>
-
-        </LinearLayout>
+        </FrameLayout>
 
     </android.support.v7.widget.CardView>
 
