--- a/app/src/main/res/layout-land/activity_camera.xml
+++ b/app/src/main/res/layout-land/activity_camera.xml
@@ -37,30 +37,45 @@
             android:layout_weight="1"
             android:layout_below="@+id/toolbar">
 
-            <ImageView
-                android:id="@+id/imageView"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="0sp"
-                android:elevation="@dimen/app_bar_elevation"
-                android:layout_weight="3"
-                android:background="@color/colorPrimaryLight"
-                android:layout_margin="10sp"/>
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="0sp"
-                android:elevation="@dimen/app_bar_elevation"
+                app:cardElevation="@dimen/app_bar_elevation"
                 android:layout_weight="1"
-                android:padding="5sp"
-                android:gravity="center"
-                android:textSize="15sp"
-                android:fontFamily="sans-serif-smallcaps"
-                android:textStyle="bold"
-                android:textColor="@color/colorBlackShade"
-                android:layout_margin="10sp"
-                android:background="@color/colorPrimaryLight"
-                android:text="SAMPLE DATA"/>
+                app:cardCornerRadius="5sp"
+                android:layout_margin="10sp">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:src="@drawable/camera"
+                    android:padding="10sp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="0sp"
+                app:cardElevation="@dimen/app_bar_elevation"
+                android:layout_weight="1"
+                app:cardCornerRadius="5sp"
+                app:cardBackgroundColor="@color/colorPrimaryLight"
+                android:layout_margin="10sp">
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="5sp"
+                    android:textSize="15sp"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:textStyle="bold"
+                    android:gravity="center"
+                    android:textColor="@color/colorBlackShade"
+                    android:text="SAMPLE DATA"/>
+
+            </android.support.v7.widget.CardView>
 
         </LinearLayout>
 
@@ -72,19 +87,39 @@
             app:cardElevation="@dimen/app_bar_elevation"
             app:cardCornerRadius="5sp">
 
-            <ScrollView
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
-                <GridLayout
+                <SurfaceView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:id="@+id/preview"/>
 
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Show Preview"
+                    android:id="@+id/show_preview"
+                    android:layout_gravity="bottom|left"
+                    android:layout_margin="10sp"
+                    android:textColor="@color/colorWhiteShade"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:padding="10sp"/>
 
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Stop Preview"
+                    android:id="@+id/stop_preview"
+                    android:layout_gravity="bottom|right"
+                    android:textColor="@color/colorWhiteShade"
+                    android:layout_margin="10sp"
+                    android:backgroundTint="@color/colorPrimaryDark"
+                    android:padding="10sp"/>
 
-                </GridLayout>
+            </FrameLayout>
 
-            </ScrollView>
 
         </android.support.v7.widget.CardView>
 
