--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -93,11 +93,11 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <TextView
@@ -143,11 +143,24 @@
                     android:text="STATE:"
                     android:textColor="@color/colorBlackShade"
                     android:textSize="18sp" />
-
-                <ListView
+                <TextView
+                    android:textAlignment="center"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/lv"/>
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-smallcaps"
+                    android:gravity="start"
+                    android:padding="5sp"
+                    android:text="Bonded Devices"
+                    android:textColor="@android:color/holo_red_dark"
+                    android:textSize="18sp" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:paddingBottom="5dp"
+                    android:id="@+id/rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
 
             </LinearLayout>
 
