--- a/app/src/main/res/layout/activity_camera_secondary.xml
+++ b/app/src/main/res/layout/activity_camera_secondary.xml
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:id="@+id/card"
-                android:text="Main Camera"
+                android:text="Secondary Camera"
                 android:textColor="@color/colorWhiteShade"
                 android:background="@color/colorPrimaryDark"
                 android:textStyle="bold"
